updated file directory and mtl

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 cifar10_rst_adv.pt.ckpt
 ssl_model_130.pth
 __pycache__
-learning/__pycache__
+
 local
 cs294-158-ssl
 deepul_helper
-results
+models
 tasks
 *.ipynb
+
+*.pyc
